Tue Feb 21 23:59:05 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * ciao/Deployment.idl
         
          Added a parameter to the perform_redeployment() operation
          to the NodeApplicationManager interface to separate the
          "installation of new components" from the "removal of
          existing components".
         
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        
          Modified the logic of perform_redeployment() functionality
          to enforce correct order of ReDaC, which is:
          (1) Install new components,
          (2) Set up new connections,
          (3) Remove old connections, and
          (4) Remove old components.
        
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h

          Fixed a bug about removing components when using ReDaC.
          In NodeApplicationManager, after the perform_redeployment() 
          call calls the remove_components() method to actually 
          destroy components from the component server, DAnCE NAM doesn't
          unbind those components from the cached component_map_, hence
          when the create_connections() method is called afterwords, 
          NAM tries to access the destroyed components to get 
          their port information, which causes the Object_Not_Exist
          exception thrown.

          The fix will unbind the removed components from the 
          cached component map. However, the trick is that after
          we unbind these components,  the port iinformation of
          these components are also lost, then the 
          DomainApplicaitonManager could not handle the 
          "removal" of connections correctly.
        
          The Right Fix is to enforce correct call sequence, which
          are illustrated above.
          Thanks Sandro Andrade <sandro @dcc.ufba.br> for reporting